deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tir
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-runners
